--- a/jamy-contact.css
+++ b/jamy-contact.css
@@ -5,7 +5,7 @@
 }
 
 body{
-    background-image: linear-gradient(to top, #aea7eb 0%, #bbf0d3 100%);
+    background-color:#ffffff;
     font-family: 'Oswald', sans-serif;
 font-family: 'Raleway', sans-serif;
 font-family: 'Roboto Condensed', sans-serif;
@@ -95,7 +95,7 @@ header{
         position: fixed;
         top: 80px;
         top: -120%;
-        background-color:#0c3768;
+        background-color:#2a2d31;
         width: 100%;
         height: 100vh;
         right: 0;
@@ -166,7 +166,7 @@ label{
 }
 
 input{
-    background-image: linear-gradient(to top, #dedcf1 0%, #e9f7ef 100%);
+    background-image: white;
     display: flex;
     flex-direction: column;
     width: 90%;
@@ -208,12 +208,46 @@ textarea{
     background-color: white;
 }
 
+ /**trabajo con el svg de next**/
+
+ .next{
+    width: 90%;
+     height: 40px;
+    margin: 0 auto;
+    margin-bottom:40px;
+    display: flex;
+    justify-content: flex-start;
+  }
+ 
+  .next-logo{
+      width: 40px;
+      height: 40px;
+ 
+  }
+ 
+  .next-logo:hover{
+     background-color:#2a2d31;
+     width: 42px;
+     height: 42px;
+     border-radius:10px;
+     transition: all .2s;
+     -webkit-border-radius:10px;
+     -moz-border-radius:10px;
+     -ms-border-radius:10px;
+     -o-border-radius:10px;
+     -webkit-transition: all .2s;
+     -moz-transition: all .2s;
+     -ms-transition: all .2s;
+     -o-transition: all .2s;
+ }
+ 
+
 
 
 /**trabajo con el pie de pagina**/
 
 .pie-de-pagina{
-    background-color:#10427c;
+    background-color:#2c2f34;
     height: 12vh;
     display: flex;
     flex-flow: row;
@@ -344,7 +378,7 @@ textarea{
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color:#8ca7c5;
+    background-color:#2c2f34;
     font-size: 20px;
     width: 50%;
     cursor: pointer;
@@ -352,12 +386,12 @@ textarea{
 }
 
 .submit:hover{
-    background-color: #073368;
+    background-color: #2c2f34;
 }
 
 
 .pie-de-pagina{
-    background-color:#10427c;
+    background-color:#2c2f34;
     height: 17vh;
     display: flex;
     flex-flow: row;
@@ -392,6 +426,39 @@ textarea{
 .bye p{
     padding: 15px 15px;
 }
+
+/**trabajo con el svg de next**/
+
+.next{
+    width: 90%;
+     height: 40px;
+    margin: 0 auto;
+    margin-bottom:40px;
+    display: flex;
+    justify-content: flex-start;
+  }
+ 
+  .next-logo{
+      width: 40px;
+      height: 40px;
+ 
+  }
+ 
+  .next-logo:hover{
+     background-color:#2a2d31;
+     width: 42px;
+     height: 42px;
+     border-radius:10px;
+     transition: all .2s;
+     -webkit-border-radius:10px;
+     -moz-border-radius:10px;
+     -ms-border-radius:10px;
+     -o-border-radius:10px;
+     -webkit-transition: all .2s;
+     -moz-transition: all .2s;
+     -ms-transition: all .2s;
+     -o-transition: all .2s;
+ }
 
 
 }
@@ -469,7 +536,7 @@ textarea{
     }
     
     .submit:hover{
-        background-color: rgb(131, 158, 231);
+        background-color:#2c2f34;
     }
 
     header{
@@ -524,6 +591,39 @@ textarea{
         .bye p{
             padding: 15px 15px;
         }
+
+        /**trabajo con el svg de next**/
+
+ .next{
+    width: 90%;
+     height: 40px;
+    margin: 0 auto;
+    margin-bottom:40px;
+    display: flex;
+    justify-content: flex-start;
+  }
+ 
+  .next-logo{
+      width: 40px;
+      height: 40px;
+ 
+  }
+ 
+  .next-logo:hover{
+     background-color:#2a2d31;
+     width: 42px;
+     height: 42px;
+     border-radius:10px;
+     transition: all .2s;
+     -webkit-border-radius:10px;
+     -moz-border-radius:10px;
+     -ms-border-radius:10px;
+     -o-border-radius:10px;
+     -webkit-transition: all .2s;
+     -moz-transition: all .2s;
+     -ms-transition: all .2s;
+     -o-transition: all .2s;
+ }
     
     
 }
