--- a/jamy.css
+++ b/jamy.css
@@ -8,7 +8,7 @@ html{
     font-family: 'DynaPuff', cursive;
     scroll-behavior: smooth;
 font-family: 'Oswald', sans-serif;
-font-family: 'Raleway', sans-serif;
+font-family: 'Raleway', sans-serif; 
 font-family: 'Roboto Condensed', sans-serif;
 font-family: 'Titillium Web', sans-serif;
 }
@@ -21,7 +21,7 @@ font-family: 'Titillium Web', sans-serif;
 }
 
 body{
-    background-color:#ffffff;
+    background-color:rgb(255, 255, 255);
     margin: 0;
     font-family: 'DynaPuff', cursive;
 font-family: 'Oswald', sans-serif;
@@ -46,7 +46,7 @@ p{
 }
 
 h1, h2{
-    color: #10427c;
+    color: #2a2d31;
     text-align: center;
     margin-bottom: 10px;
     font-size: 8vw;
@@ -66,7 +66,7 @@ a, li{
 header{
     position: sticky;
     top: 0;
-    background-color:  #10427c;
+    background-color:#2c2f34;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -87,11 +87,11 @@ header{
 
 .nav-menu a{
     text-decoration: none;
-    color: white;
+    color:black;
 }
 
 .nav-menu a:hover{
-    color:#021730;
+    color:#161718;
 }
 
 
@@ -137,7 +137,7 @@ header{
         display: block;
         position: fixed;
         top: -120%;
-        background-color:#0c3768;
+        background-color:#2a2d31;
         width: 100%;
         height: 100vh;
         right: 0;
@@ -149,7 +149,8 @@ header{
 
     .nav-menu ul li{
         padding: 2.5rem;
-        font-size: 20px;
+        font-size: 22px;
+        font-weight: 550;
         display: flex;
         justify-content: center;
         margin: 0;
@@ -280,7 +281,7 @@ header{
  }
 
  .next-logo:hover{
-    background-color:#10427c;
+    background-color:#2a2d31;
     width: 42px;
     height: 42px;
     border-radius:10px;
@@ -298,7 +299,7 @@ header{
 /**trabajo con el pie de pagina**/
 
 .pie-de-pagina{
-    background-color:#10427c;
+    background-color:#2c2f34;
     height: 17vh;
     display: flex;
     flex-flow: row;
@@ -333,7 +334,7 @@ header{
         position: sticky;
         top: 0;
         width: 100%;
-        height: 12vh;
+        height: 13vh;
         display: flex;
         align-items: center;
         justify-content: space-between;
