--- a/jamy-contact.css
+++ b/jamy-contact.css
@@ -5,7 +5,7 @@
 }
 
 body{
-    background-color:#ffffff;
+    background-color:#cfc3c3fb;
     font-family: 'Oswald', sans-serif;
 font-family: 'Raleway', sans-serif;
 font-family: 'Roboto Condensed', sans-serif;
@@ -166,7 +166,7 @@ label{
 }
 
 input{
-    background-image: white;
+    background-image: rgb(228, 216, 216);
     display: flex;
     flex-direction: column;
     width: 90%;
@@ -181,7 +181,7 @@ input{
 }
 
 textarea{
-    background-image: linear-gradient(to top, #dedcf1 0%, #e9f7ef 100%);
+    background-color:rgb(228, 216, 216);
     display: flex;
     flex-direction: column;
     width: 90%;
@@ -198,14 +198,14 @@ textarea{
     display: flex;
     justify-content: center;
     align-items: center;
-    background-image: linear-gradient(to top, #dedcf1 0%, #e9f7ef 100%);
+    background-color:rgb(228, 216, 216);
     cursor: pointer;
     font-size: 20px;
     width: 50%;
 }
 
 .submit:hover{
-    background-color: white;
+    background-color:rgb(228, 216, 216);
 }
 
  /**trabajo con el svg de next**/
@@ -378,7 +378,7 @@ textarea{
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color:#2c2f34;
+    background-color:white;
     font-size: 20px;
     width: 50%;
     cursor: pointer;
@@ -529,7 +529,7 @@ textarea{
         display: flex;
         justify-content: center;
         align-items: center;
-    background-image: linear-gradient(to top, #dedcf1 0%, #e9f7ef 100%);
+    background-color:white ;
         font-size: 20px;
         width: 50%;
         cursor: pointer;
