--- a/jamy-places.css
+++ b/jamy-places.css
@@ -83,7 +83,7 @@ header{
 }
 
 .nav-menu a:hover{
-    color:#021730;
+    color:#1b1c1d;
 }
 
 
@@ -111,6 +111,7 @@ header{
     header{
         width: 100%;
         height: 10vh;
+        z-index: 9;
     }
 
     .checkbtn{
@@ -247,6 +248,15 @@ header{
     -o-transition: all 400ms ease;
 }
 
+.card-container:hover{
+    box-shadow: 7px 7px 20px rgba(0,0,0,0.8);
+    transform: translateY(-2%);
+    -webkit-transform: translateY(-2%);
+    -moz-transform: translateY(-2%);
+    -ms-transform: translateY(-2%);
+    -o-transform: translateY(-2%);
+}
+
 .card-container .img-card{
     width: 100%;
     height: 60%;
@@ -364,6 +374,7 @@ header{
         display: flex;
         align-items: center;
         justify-content: space-between;
+        z-index: 9;
     }
 
     header a{
@@ -423,11 +434,27 @@ header{
     gap: 30px;
 }
 
+.card-container:hover{
+    box-shadow: 7px 7px 20px rgba(0,0,0,0.8);
+    transform: translateY(-1%);
+    -webkit-transform: translateY(-1%);
+    -moz-transform: translateY(-1%);
+    -ms-transform: translateY(-1%);
+    -o-transform: translateY(-1%);
+}
+
+
+
 
 .card-container{
     width: 100%;
     height: 400px;
     cursor:default;
+    transition: all 400ms ease;
+    -webkit-transition: all 400ms ease;
+    -moz-transition: all 400ms ease;
+    -ms-transition: all 400ms ease;
+    -o-transition: all 400ms ease;
 }
 
 .card-container .img-card p{
@@ -463,6 +490,7 @@ header{
         display: flex;
         align-items: center;
         justify-content: center;
+        z-index: 9;
 
     }
 
@@ -536,11 +564,27 @@ header{
         gap: 25px;
     }
 
+
+
     .card-container{
         width: 100%;
         height: 400px;
         cursor:default;
-    }
+        transition: all 400ms ease;
+        -webkit-transition: all 400ms ease;
+        -moz-transition: all 400ms ease;
+        -ms-transition: all 400ms ease;
+        -o-transition: all 400ms ease;
+}
+
+    .card-container:hover{
+        box-shadow: 7px 7px 20px rgba(0,0,0,0.8);
+        transform: translateY(-1%);
+        -webkit-transform: translateY(-1%);
+        -moz-transform: translateY(-1%);
+        -ms-transform: translateY(-1%);
+        -o-transform: translateY(-1%);
+}
 
     .card-container .img-card p{
         font-size: 17px;
