--- a/jamy.css
+++ b/jamy.css
@@ -91,7 +91,7 @@ header{
 }
 
 .nav-menu a:hover{
-    color:#161718;
+    color:#1b1c1d;
 }
 
 
@@ -144,7 +144,7 @@ header{
     }
 
     .nav-menu ul:hover{
-        color: #021730;
+        color: #2a2d31;
     }
 
     .nav-menu ul li{
