--- a/jamy-places.css
+++ b/jamy-places.css
@@ -15,14 +15,26 @@ font-family: 'Titillium Web', sans-serif;
 hr{
     width: 80%;
     margin: 0 auto;
-    margin-top: 20px;
+    margin-top: 20px; 
+}
+
+p{
+    color: #ffffff;
 }
 
 h1, h2, h3{
     font-size: 20px;
-    color:black;
+    color:#ffffff;
     text-align: center;
     margin-bottom: 10px;
+}
+.container-redes div a img{
+    filter: invert(8%) sepia(65%) saturate(4318%) hue-rotate(264deg) brightness(79%) contrast(107%);
+}
+
+.section-two div img{
+    filter: invert(8%) sepia(65%) saturate(4318%) hue-rotate(264deg) brightness(79%) contrast(107%);
+    
 }
 
 
@@ -33,7 +45,7 @@ h1, h2, h3{
 }
 
 body{
-    background-color:#ffffff;
+    background-color:rgb(4, 1, 22);
     margin: 0;
     font-family: 'DynaPuff', cursive;
 font-family: 'Oswald', sans-serif;
@@ -58,7 +70,7 @@ a, li{
 header{
     position: sticky;
     top: 0;
-    background-color:#2c2f34;
+    background-color:#2a0752;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -79,12 +91,10 @@ header{
 
 .nav-menu a{
     text-decoration: none;
-    color:black;
+    color:#2a0752;
 }
 
-.nav-menu a:hover{
-    color:#1b1c1d;
-}
+
 
 
 .menu-icon{
@@ -131,7 +141,7 @@ header{
         position: fixed;
         top: 80px;
         top: -120%;
-        background-color:#2a2d31;
+        background-color:rgb(4, 1, 22);
         width: 100%;
         height: 100vh;
         right: 0;
@@ -197,6 +207,7 @@ header{
     margin-top: 50px;
 }
 .img-principal img{
+    background-color: #2a0752;
     width: 330px;
     height: 330px;
 }
@@ -234,7 +245,7 @@ header{
     width: 100%;
     height: 50vh;
     border-radius: 6px;
-    border: 1px solid black;
+    border: 2px solid #2a0752;
     margin: 20px 0 30px 0;
     box-shadow:5px 5px 15px rgba(0, 0, 0, 0.6) ;
     transition: all 400ms ease;
@@ -308,13 +319,15 @@ header{
   }
  
   .next-logo{
+    background-color:#2a0752;
+
       width: 40px;
       height: 40px;
  
   }
  
   .next-logo:hover{
-     background-color:#2c2f34;
+     background-color:#2a0752;
      width: 42px;
      height: 42px;
      border-radius:5px;
@@ -332,7 +345,7 @@ header{
  /**trabajo con el pie de pagina**/
  
  .pie-de-pagina{
-     background-color:#2c2f34;
+     background-color:#2a0752;
      height: 17vh;
      display: flex;
      flex-flow: row;
@@ -370,7 +383,7 @@ header{
         position: sticky;
         top: 0;
         width: 100%;
-        height: 13vh;
+        height: 9vh;
         display: flex;
         align-items: center;
         justify-content: space-between;
@@ -378,7 +391,8 @@ header{
     }
 
     header a{
-        font-size: 2.5vw;
+        color: rgb(4, 1, 22) !important;
+        font-size: 20px;
         padding: 0 10px;
     }
 
@@ -513,6 +527,7 @@ header{
     
 
     header a{
+        color: black!important;
         font-size: 22px;
         padding: 0 60px;
     }
