--- a/jamy.css
+++ b/jamy.css
@@ -12,7 +12,7 @@ font-family: 'Raleway', sans-serif;
 font-family: 'Roboto Condensed', sans-serif;
 font-family: 'Titillium Web', sans-serif;
 }
-
+ 
 
 *,
 *::after,
@@ -20,8 +20,16 @@ font-family: 'Titillium Web', sans-serif;
     box-sizing: inherit;
 }
 
+.bikes img{
+    filter: invert(8%) sepia(65%) saturate(4318%) hue-rotate(264deg) brightness(79%) contrast(107%);
+}
+
+.origami img{
+    filter: invert(8%) sepia(65%) saturate(4318%) hue-rotate(264deg) brightness(79%) contrast(107%);
+}
+
 body{
-    background-color:rgb(255, 255, 255);
+    background-color:rgb(4, 1, 22);
     margin: 0;
     font-family: 'DynaPuff', cursive;
 font-family: 'Oswald', sans-serif;
@@ -41,12 +49,14 @@ hr{
     font-size: 30px;
 }
 
+
 p{
     font-size: 4vw;
+    color: #ffffff;
 }
 
 h1, h2{
-    color: #2a2d31;
+    color: #ffffff;
     text-align: center;
     margin-bottom: 10px;
     font-size: 8vw;
@@ -66,7 +76,7 @@ a, li{
 header{
     position: sticky;
     top: 0;
-    background-color:#2c2f34;
+    background-color:#2a0752;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -87,12 +97,10 @@ header{
 
 .nav-menu a{
     text-decoration: none;
-    color:black;
+    color:#2a0752;
 }
 
-.nav-menu a:hover{
-    color:#1b1c1d;
-}
+
 
 
 .menu-icon{
@@ -119,6 +127,7 @@ header{
     header{
         width: 100%;
         height: 10vh;
+        z-index: 99;
     }
 
     .checkbtn{
@@ -137,15 +146,14 @@ header{
         display: block;
         position: fixed;
         top: -120%;
-        background-color:#2a2d31;
+        background-color:rgb(4, 1, 22);
         width: 100%;
         height: 100vh;
         right: 0;
+        
     }
 
-    .nav-menu ul:hover{
-        color: #2a2d31;
-    }
+   
 
     .nav-menu ul li{
         padding: 2.5rem;
@@ -275,13 +283,14 @@ header{
  }
 
  .next-logo{
+    background-color: #2a0752;
      width: 40px;
      height: 40px;
 
  }
 
  .next-logo:hover{
-    background-color:#2a2d31;
+    background-color:#2a0752;
     width: 42px;
     height: 42px;
     border-radius:10px;
@@ -299,7 +308,7 @@ header{
 /**trabajo con el pie de pagina**/
 
 .pie-de-pagina{
-    background-color:#2c2f34;
+    background-color:#2a0752;
     height: 17vh;
     display: flex;
     flex-flow: row;
@@ -341,6 +350,8 @@ header{
     }
 
     header a{
+        color: rgb(4, 1, 22) !important;
+        
         font-size: 20px;
         padding: 0 10px;
     }
@@ -391,6 +402,7 @@ header{
     }
 
     header a{
+        color: black !important;
         font-size: 22px;
         padding: 0 60px;
     }
