--- a/jamy-places-white.css
+++ b/jamy-places-white.css
@@ -19,12 +19,12 @@ hr{
 }
 
 p{
-    color: #ffffff;
+    color: black;
 }
 
 h1, h2, h3{
     font-size: 20px;
-    color:#ffffff;
+    color:black;
     text-align: center;
     margin-bottom: 10px;
 }
@@ -41,7 +41,7 @@ h1, h2, h3{
     
 }
 
-.sun{
+.moon{
     width: 35px;
     height: 35px;
 }
@@ -54,7 +54,7 @@ h1, h2, h3{
 }
 
 body{
-    background-color:rgb(4, 1, 22);
+    background-color:#ffffff;
     margin: 0;
     font-family: 'DynaPuff', cursive;
 font-family: 'Oswald', sans-serif;
@@ -100,7 +100,7 @@ header{
 
 .nav-menu a{
     text-decoration: none;
-    color:#2a0752;
+    color:black;
 }
 
 
@@ -150,7 +150,7 @@ header{
         position: fixed;
         top: 80px;
         top: -120%;
-        background-color:rgb(4, 1, 22);
+        background-color:#ffffff;
         width: 100%;
         height: 100vh;
         right: 0;
@@ -186,10 +186,6 @@ header{
 
 .logo-header{
     display: none;
-}
-
-.sun{
-    filter: invert(9%) sepia(17%) saturate(6890%) hue-rotate(250deg) brightness(125%) contrast(116%);
 }
 
 .bikes{
