--- a/jamy-white.css
+++ b/jamy-white.css
@@ -30,13 +30,13 @@ font-family: 'Titillium Web', sans-serif;
     filter: invert(14%) sepia(39%) saturate(7428%) hue-rotate(337deg) brightness(97%) contrast(89%);
 }
 
-.sun{
+.moon{
     width: 35px;
     height: 35px;
 }
 
 body{
-    background-color:rgb(4, 1, 22);
+    background-color:#f8f3f3;
     margin: 0;
     font-family: 'DynaPuff', cursive;
 font-family: 'Oswald', sans-serif;
@@ -52,18 +52,18 @@ hr{
 }
 
 .title{
-    color: white;
+    color:#ffffff;
     font-size: 30px;
 }
 
 
 p{
     font-size: 4vw;
-    color: #ffffff;
+    color:black;
 }
 
 h1, h2{
-    color: #ffffff;
+    color:black;
     text-align: center;
     margin-bottom: 10px;
     font-size: 8vw;
@@ -104,7 +104,7 @@ header{
 
 .nav-menu a{
     text-decoration: none;
-    color:#2a0752;
+    color:black;
 }
 
 
@@ -153,17 +153,14 @@ header{
         display: block;
         position: fixed;
         top: -120%;
-        background-color:rgb(4, 1, 22);
+        background-color:white;
         width: 100%;
         height: 100vh;
         right: 0;
         
     }
 
-
-    .sun{
-        filter: invert(9%) sepia(17%) saturate(6890%) hue-rotate(250deg) brightness(125%) contrast(116%);
-    }
+    
 
    
 
@@ -488,8 +485,6 @@ header{
         position: relative;
         right: 16px;
     }
-
-   
 
 }
 
