--- a/jamy-contact-white.css
+++ b/jamy-contact-white.css
@@ -4,6 +4,11 @@
     box-sizing: border-box;
 }
 
+html{
+scroll-behavior: smooth;
+
+}
+
 body{
     background-color:#fff;
     font-family: 'Oswald', sans-serif;
