--- a/jamy-contact.css
+++ b/jamy-contact.css
@@ -4,6 +4,11 @@
     box-sizing: border-box;
 }
 
+html{
+scroll-behavior: smooth;
+
+}
+
 body{
     background-color:rgb(4, 1, 22);
     font-family: 'Oswald', sans-serif;
