--- a/jamy-white.css
+++ b/jamy-white.css
@@ -11,6 +11,8 @@ font-family: 'Oswald', sans-serif;
 font-family: 'Raleway', sans-serif; 
 font-family: 'Roboto Condensed', sans-serif;
 font-family: 'Titillium Web', sans-serif;
+scroll-behavior: smooth;
+
 }
  
 
