--- a/jamy-places-white.css
+++ b/jamy-places-white.css
@@ -46,6 +46,7 @@ h1, h2, h3{
 .moon{
     width: 35px;
     height: 35px;
+    filter: invert(100%) sepia(0%) saturate(0%) hue-rotate(275deg) brightness(102%) contrast(103%);
 }
 
 
@@ -76,6 +77,7 @@ a, li{
 .logo-header img{
     width: 40px;
     height: 40px;
+    filter: invert(100%) sepia(0%) saturate(0%) hue-rotate(275deg) brightness(102%) contrast(103%);
 }
 
 header{
@@ -102,7 +104,7 @@ header{
 
 .nav-menu a{
     text-decoration: none;
-    color:black;
+    color:#ffffff !important;
 }
 
 
