--- a/jamy-places.css
+++ b/jamy-places.css
@@ -122,6 +122,7 @@ header{
     -moz-border-radius: 2px;
     -ms-border-radius: 2px;
     -o-border-radius: 2px;
+    filter: invert(100%) sepia(39%) saturate(0%) hue-rotate(287deg) brightness(114%) contrast(101%);
 }
 
 .menu-icon, #check{
@@ -194,6 +195,7 @@ header{
 
 .sun{
     filter: invert(9%) sepia(17%) saturate(6890%) hue-rotate(250deg) brightness(125%) contrast(116%);
+    filter: invert(100%) sepia(39%) saturate(0%) hue-rotate(287deg) brightness(114%) contrast(101%);
 }
 
 .bikes{
@@ -250,7 +252,7 @@ header{
 /**configuracion de las cards**/
 
 .cards{
-    width: 70%;
+    width: 80%;
     margin: 0 auto;
     display: flex;
     flex-direction: column;
