--- a/jamy-white.css
+++ b/jamy-white.css
@@ -36,6 +36,7 @@ scroll-behavior: smooth;
     width: 35px;
     height: 35px;
     filter: invert(100%) sepia(0%) saturate(0%) hue-rotate(275deg) brightness(102%) contrast(103%);
+
 }
 
 body{
@@ -108,7 +109,7 @@ header{
 
 .nav-menu a{
     text-decoration: none;
-    color:#ffffff !important;
+    color:#fff !important;
 }
 
 
@@ -126,6 +127,7 @@ header{
     -moz-border-radius: 2px;
     -ms-border-radius: 2px;
     -o-border-radius: 2px;
+    filter: invert(94%) sepia(94%) saturate(0%) hue-rotate(246deg) brightness(106%) contrast(106%);
 }
 
 .menu-icon, #check{
@@ -176,6 +178,14 @@ header{
         justify-content: center;
         margin: 0;
         margin-right: 35px;
+    }
+
+    .nav-menu ul li a{
+        color: black !important;
+    }
+
+    .moon{
+        filter: invert(0%) sepia(0%) saturate(0%) hue-rotate(199deg) brightness(96%) contrast(107%);
     }
 
 
