--- a/jamy-contact-white.css
+++ b/jamy-contact-white.css
@@ -24,6 +24,15 @@ p{
     color: black;
 }
 
+.pie-de-pagina div img{
+    filter: invert(1);
+    -webkit-filter: invert(1);
+}
+
+.derechos{
+    color: #fff;
+}
+
 
 
 
