--- a/jamy-places.css
+++ b/jamy-places.css
@@ -49,6 +49,13 @@ h1, h2, h3{
     filter: invert(100%) sepia(0%) saturate(0%) hue-rotate(275deg) brightness(102%) contrast(103%);
 }
 
+.bikes img{
+    width: 70px;
+    height: 70px;
+    filter: invert(1) !important;
+    -webkit-filter: invert(1) !important;
+}
+
 
 *,
 *::after,
@@ -209,6 +216,8 @@ header{
 .bikes img{
     width: 50px;
     height: 50px;
+   
+
 }
 
 }
@@ -320,7 +329,8 @@ header{
     width: 30px;
     height: 30px;
     margin-bottom: 10px;
-
+    filter: invert(1) !important;
+    -webkit-filter: invert(1) !important;
 }
 
 
@@ -375,12 +385,15 @@ header{
  .pie-de-pagina div img{
      width: 30px;
      height: 30px;
- }
+     filter: invert(1);
+     -webkit-filter: invert(1);
+}
  
  .derechos{
      display: flex;
      justify-content: center;
      align-items: center;
+     color: #fff;
  }
 
 
@@ -649,7 +662,9 @@ header{
     .bikes img{
         width: 70px;
         height: 70px;
-    }
+        filter: invert(1);
+        -webkit-filter: invert(1);
+}
     
 
 
