--- a/jamy.css
+++ b/jamy.css
@@ -24,6 +24,8 @@ scroll-behavior: smooth;
 .bikes img{
     filter: invert(8%) sepia(65%) saturate(4318%) hue-rotate(264deg) brightness(79%) contrast(107%);
     filter: invert(14%) sepia(39%) saturate(7428%) hue-rotate(337deg) brightness(97%) contrast(89%);
+    filter: invert(1);
+    -webkit-filter: invert(1);
 }
 
 .origami img{
@@ -293,7 +295,9 @@ header{
  .origami div img{
     width: 40px;
     height: 40px;
- }
+    filter: invert(1);
+    -webkit-filter: invert(1);
+}
 
  /**trabajo con el svg de next**/
 
@@ -343,12 +347,15 @@ header{
 .pie-de-pagina div img{
     width: 30px;
     height: 30px;
+    filter: invert(1);
+    -webkit-filter: invert(1);
 }
  
 .derechos{
     display: flex;
     justify-content: center;
     align-items: center;
+    color: #ffffff;
 }
 
 /**@media para pantallas medianas**/
