--- a/jamy.css
+++ b/jamy.css
@@ -6,11 +6,9 @@
 html{
     box-sizing: border-box;
     font-family: 'DynaPuff', cursive;
-    scroll-behavior: smooth;
-font-family: 'Oswald', sans-serif;
-font-family: 'Raleway', sans-serif; 
-font-family: 'Roboto Condensed', sans-serif;
-font-family: 'Titillium Web', sans-serif;
+    font-family: 'Bebas Neue', cursive;
+font-family: 'Covered By Your Grace', cursive;
+font-family: 'Roboto Slab', serif;
 scroll-behavior: smooth;
 }
  
@@ -44,12 +42,7 @@ scroll-behavior: smooth;
 body{
     background-color:rgb(4, 1, 22);
     margin: 0;
-    font-family: 'DynaPuff', cursive;
-font-family: 'Oswald', sans-serif;
-font-family: 'Raleway', sans-serif;
-font-family: 'Roboto', sans-serif;
-font-family: 'Roboto Condensed', sans-serif;
-font-family: 'Titillium Web', sans-serif;
+  
 }
 
 hr{
