--- a/jamy.css
+++ b/jamy.css
@@ -214,7 +214,7 @@ header{
     justify-content: center;
     align-items: center;
     text-align: center;
-    height: 85vh;
+    height: 90vh;
     color: white;
     background-image:linear-gradient(
         0deg, rgba(0,0,0,0.7),  rgba(0,0,0,0.7)
@@ -222,7 +222,7 @@ header{
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
-    clip-path: polygon(0 0,100% 0,100% 80%, 50% 95%, 0 80%);
+    /* clip-path: polygon(0 0,100% 0,100% 80%, 50% 98%, 0 80%); */
 
  }
 
